# vml-audio-lab

./: .gitignore  CLAUDE.md
.claude/agents/: architect.md  coder.md  reviewer.md
.claude/skills/: song-anatomy.md
docs/plans/: 2026-02-22-vml-audio-lab-design.md  2026-02-23-rekordbox-usb-preparation-design.md  2026-02-23-rekordbox-usb-preparation-implementation-plan.md  2026-02-23-vocal-sampling-and-genre-intelligence-design.md  mvp1-tasks.md
mcp-server/: pyproject.toml
mcp-server/src/vml_audio_lab/: __init__.py  server.py
mcp-server/src/vml_audio_lab/tools/: analysis.py  camelot.py  cues.py  genre.py  library.py  loader.py  mood.py  playlist.py  separator.py  structure.py  transition.py  usb_export.py  visualize.py  vocal_analysis.py
mcp-server/src/vml_audio_lab/utils/: plotting.py
mcp-server/tests/: test_analysis.py  test_camelot.py  test_cues.py  test_e2e.py  test_genre.py  test_genre_expanded.py  test_library.py  test_loader.py  test_matching.py  test_mood.py  test_playlist.py  test_playlist_sampling.py  test_separator.py  test_server_prepare.py  test_structure.py  test_structure_genre.py  test_transition.py  test_usb_export.py  test_visualize.py  test_vocal_analysis.py
