[project]
name = "vml-audio-lab"
version = "0.1.0"
description = "Claude Codeに「耳」を与えるMCPサーバー — 音楽分析・構造解剖・DJ/音楽制作の先生"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Makoto" },
]

dependencies = [
    "fastmcp>=2.0.0",
    "librosa>=0.10.0",
    "matplotlib>=3.8.0",
    "essentia>=2.1b6.dev0",
    "yt-dlp>=2024.0.0",
    "numpy>=1.26.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vml_audio_lab"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
